// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination> that renders a pagination component should render correctly with all props 1`] = `
<div>
  <nav
    aria-label="pagination"
    class="Pagination Pagination--align_center"
  >
    <button
      aria-disabled="false"
      class="Button Button--variant_ghost Button--context_secondary Pagination__button"
      data-page="5"
      style="width: auto;"
      type="button"
    >
      ‹ Previous
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="1"
      style="width: auto;"
      type="button"
    >
      1
    </button>
    <div
      class="Pagination__gap"
    >
      …
    </div>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="3"
      style="width: auto;"
      type="button"
    >
      3
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="4"
      style="width: auto;"
      type="button"
    >
      4
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="5"
      style="width: auto;"
      type="button"
    >
      5
    </button>
    <button
      aria-current="page"
      class="Button Button--variant_ghost Button--context_secondary PaginationButton PaginationButton--isActive"
      data-page="6"
      style="width: auto;"
      type="button"
    >
      6
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="7"
      style="width: auto;"
      type="button"
    >
      7
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="8"
      style="width: auto;"
      type="button"
    >
      8
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="9"
      style="width: auto;"
      type="button"
    >
      9
    </button>
    <button
      aria-disabled="false"
      class="Button Button--variant_ghost Button--context_secondary Pagination__button"
      data-page="7"
      style="width: auto;"
      type="button"
    >
      Next ›
    </button>
  </nav>
</div>
`;

exports[`<Pagination> that renders a pagination component should render correctly with default props 1`] = `
<div>
  <nav
    aria-label="pagination"
    class="Pagination Pagination--align_center"
  >
    <button
      aria-current="page"
      class="Button Button--variant_ghost Button--context_secondary PaginationButton PaginationButton--isActive"
      data-page="1"
      style="width: auto;"
      type="button"
    >
      1
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="2"
      style="width: auto;"
      type="button"
    >
      2
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="3"
      style="width: auto;"
      type="button"
    >
      3
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="4"
      style="width: auto;"
      type="button"
    >
      4
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="5"
      style="width: auto;"
      type="button"
    >
      5
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="6"
      style="width: auto;"
      type="button"
    >
      6
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="7"
      style="width: auto;"
      type="button"
    >
      7
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="8"
      style="width: auto;"
      type="button"
    >
      8
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="9"
      style="width: auto;"
      type="button"
    >
      9
    </button>
    <button
      class="Button Button--variant_ghost Button--context_secondary PaginationButton"
      data-page="10"
      style="width: auto;"
      type="button"
    >
      10
    </button>
  </nav>
</div>
`;
